# Rustnithm-Android

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/org/cf0x/rustnithm/: MainActivity.kt
app/src/main/java/org/cf0x/rustnithm/Data/: DataManager.kt  Haptic.kt  Net.kt  Touch.kt
app/src/main/java/org/cf0x/rustnithm/Emu/: Air.kt  Slide.kt
app/src/main/java/org/cf0x/rustnithm/Page/: Bon.kt  Debug.kt  Jour.kt
app/src/main/java/org/cf0x/rustnithm/Theme/: Color.kt  Skin.kt  Theme.kt  Type.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: lib.rs
