[package]
name = "rustnithm"
version = "0.1.0"
edition = "2021"
authors = ["C-F0x"]
description = "High-performance 8kHz UDP engine for Android"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"

crossbeam-utils = "0.8.1"

once_cell = "1.19.0"

libc = "0.2.155"

thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true